--- a/assignment1/Makefile
+++ b/assignment1/Makefile
@@ -2,16 +2,19 @@ CXX = g++
 CC  = g++
 
 CPPFLAGS =  -std=c++11
-CXXFLAGS =  -O2 -Wall -Wextra -Wold-style-cast -std=c++11 -g
+CXXFLAGS =  -O2 -Wall -Wextra -Wold-style-cast -pedantic-errors
 
 PROGS = Search
 
-all: $(PROGS)
+all: $(PROGS) permission
 
 Search: Search.o Board.o AI.o
 
 clean:
 	rm -f *.o $(PROGS) *.d*
+
+permission:
+	chmod 755 *
 
 %.d: %.cpp
 	@set -e; rm -f $@; \
